# expo

./: %5BContent_Types%5D.xml  .babelrc  .dockerignore  .editorconfig  .env  .env.example  .envrc  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .gitrepo  .lfsconfig  .npmignore  .npmrc  .oxfmtrc.json  .prettierignore  .prettierrc  .smart_improvement_42495.md  .smart_improvement_43910.md  .swift-format  .swiftlint.yml  .watchmanconfig  .yarnrc  00008110-001A55AC0C89401E.mobileprovision  00008110-001A55AC0C89401E.p12  AI_PLATFORM_CODE_EXAMPLES.md  ALNC  ARCHITECTURE_DIAGRAMS.md  Amba  App  App.js  Brewfile  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COSMETICS &BEAUTY connect  (+83 more)
android/expoview/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro  unimodules.gradle.kts
android/expoview/libs/: ReactAndroid-release-abi18_0_0.aar  ReactAndroid-release-abi20_0_0.aar  ReactAndroid-release-abi23_0_0.aar  ReactAndroid-release-abi26_0_0.aar  ReactAndroid-release-abi27_0_0.aar  expo-ads-admob-release-abi30_0_0.aar  expo-constants-interface-release-abi29_0_0.aar  expo-constants-release-abi29_0_0.aar  expo-core-release-abi29_0_0.aar  expo-face-detector-release-abi30_0_0.aar  expo-payments-stripe-release-abi30_0_0.aar  expo-permissions-interface-release-abi29_0_0.aar  expo-print-release-abi30_0_0.aar  expo-sensors-release-abi30_0_0.aar  expo-sms-release-abi29_0_0.aar
android/expoview/src/androidTest/java/: ContactsModuleTest.java
android/expoview/src/main/: AndroidManifest.xml
android/expoview/src/main/Common/cpp/NativeModules/: NativeReanimatedModule.cpp  NativeReanimatedModuleSpec.cpp
android/expoview/src/main/Common/cpp/Registries/: EventHandlerRegistry.cpp  MapperRegistry.cpp  WorkletsCache.cpp
android/expoview/src/main/Common/cpp/SharedItems/: FrozenObject.cpp  MutableValue.cpp  MutableValueSetterProxy.cpp  RemoteObject.cpp  ShareableValue.cpp
android/expoview/src/main/Common/cpp/Tools/: EventHandler.cpp  Mapper.cpp  RuntimeDecorator.cpp  Scheduler.cpp
android/expoview/src/main/Common/cpp/headers/NativeModules/: NativeReanimatedModule.h  NativeReanimatedModuleSpec.h
android/expoview/src/main/Common/cpp/headers/Registries/: EventHandlerRegistry.h  MapperRegistry.h  WorkletsCache.h
android/expoview/src/main/Common/cpp/headers/SharedItems/: FrozenObject.h  MutableValue.h  MutableValueSetterProxy.h  RemoteObject.h  ShareableValue.h
android/expoview/src/main/Common/cpp/headers/SpecTools/: ErrorHandler.h  Logger.h  LoggerInterface.h  SpeedChecker.h
android/expoview/src/main/Common/cpp/headers/Tools/: EventHandler.h  JSIStoreValueUser.h  Mapper.h  PlatformDepMethodsHolder.h  ReanimatedHiddenHeaders.h  RuntimeDecorator.h  Scheduler.h  WorkletEventHandler.h
android/expoview/src/main/Common/cpp/hidden_headers/: LoggerInterface.h
android/expoview/src/main/JNI/: Android.mk  Application.mk
android/expoview/src/main/JNI/react/: Android.mk
android/expoview/src/main/cpp/: AndroidErrorHandler.cpp  AndroidLogger.cpp  AndroidScheduler.cpp  NativeProxy.cpp  OnLoad.cpp  TurboModule.cpp
android/expoview/src/main/cpp/headers/: AndroidErrorHandler.h  AndroidLogger.h  AndroidScheduler.h  LayoutAnimations.h  NativeProxy.h  TurboModule.h
android/expoview/src/main/java/host/exp/exponent/: ABIVersion.java  AppLoader.java  Constants.java  ExpoApplication.java  ExpoApplication.kt  ExpoGoLauncherSelectionPolicyFilterAware.kt  ExpoHandler.java  ExpoHandler.kt  ExpoUpdatesAppLoader.java  ExpoUpdatesAppLoader.kt  ExponentDevActivity.java  ExponentIntentService.java  ExponentIntentService.kt  ExponentManifest.java  ExponentManifest.kt  LauncherActivity.java  (+8 more)
android/expoview/src/main/jni/: Android.mk  Application.mk  EXGL.c  EXGL.cpp
android/expoview/src/main/res/anim/: rns_default_enter_in.xml  rns_default_enter_out.xml  rns_default_exit_in.xml  rns_default_exit_out.xml  rns_fade_from_bottom.xml  rns_fade_in.xml  rns_fade_out.xml  rns_fade_to_bottom.xml  rns_no_animation_20.xml  rns_no_animation_medium.xml  rns_slide_in_from_bottom.xml  rns_slide_in_from_left.xml
android/expoview/src/main/res/animator/: card_flip_left_out.xml
android/expoview/src/main/res/drawable/: edit_text_holo_dark.xml  loading_progress_popup_background.xml  loading_status_bar_background.xml  spinner_background_holo_dark.xml  splash_background.xml
android/expoview/src/main/res/layout/: info_activity.xml  loading_popup.xml  loading_view.xml  notification.xml  oauth_webview_activity.xml  payment_form_fragment_two.xml  simple_spinner_dropdown_item.xml  simple_spinner_item.xml
android/expoview/src/main/res/values/: colors.xml  dark_mode.xml  strings.xml  styles.xml
android/expoview/src/main/res/values-v23/: styles.xml
android/expoview/src/main/res/xml/: provider_paths.xml  stub_material.xml
android/expoview/src/test/java/: ContactsModuleTest.java  TestContacts.java
android/expoview/src/test/resources/: plain.83.hbc
android/versioned-abis/expoview-abi44_0_0/: CMakeLists.txt  build.gradle
android/versioned-abis/expoview-abi44_0_0/maven/host/exp/reactandroid-abi44_0_0/: maven-metadata-local.xml
android/versioned-abis/expoview-abi44_0_0/src/main/: AndroidManifest.xml
apps/bare-expo/android/app/src/main/jni/: Android.mk  CMakeLists.txt  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h  OnLoad.cpp  appmodules_pch_owner.cpp  pch.h
ios/versioned/sdk45/EXGL_CPP/: ABI45_0_0EXGL.cpp  ABI45_0_0EXGL.h  ABI45_0_0EXGLContext.cpp  ABI45_0_0EXGLContext.h  ABI45_0_0EXGLContextManager.cpp  ABI45_0_0EXGLContextManager.h  ABI45_0_0EXGLImageUtils.cpp  ABI45_0_0EXGLImageUtils.h  ABI45_0_0EXGLJniApi.cpp  ABI45_0_0EXGL_CPP.podspec.json  ABI45_0_0EXJsiArgsTransform.h  ABI45_0_0EXJsiUtils.h  ABI45_0_0EXPlatformUtils.h  ABI45_0_0EXTypedArrayApi.cpp  ABI45_0_0EXTypedArrayApi.h  ABI45_0_0EXWebGLMethods.cpp  ABI45_0_0EXWebGLMethods.h  ABI45_0_0EXWebGLMethodsHelpers.h  ABI45_0_0EXWebGLRenderer.cpp  ABI45_0_0EXWebGLRenderer.h  ABI45_0_0EXiOSUtils.mm  CMakeLists.txt
maurimesh-complete/rust/: Cargo.toml  build.rs  clippy.toml  rustfmt.toml  uniffi.toml
(+122749 files in other folders)
